[package]
name = "jsxx"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_ecma_parser =  "0.117.0"
swc_ecma_visit = "0.76.0"
swc_common = "0.27.0"
thiserror = "1.0.32"
anyhow = "1.0.43"
swc_ecma_ast = "0.90.0"
clap = { version = "3.2.16", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.43"
uuid = { version = "1.1.2", features = ["v4"] }
